Added 3 activities for part 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
-    <string name="app_name">Assignment 1</string>
+    <string name="app_name">AndroidAssignment</string>
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\'m a Button</string>
+    <string name="LoginText">Login</string>
+    <string name="LoginHintName">login_name</string>
+    <string name="PasswordText">Password</string>
+    <string name="SwitchText">What does this do?</string>
+    <string name="CheckBoxText">CheckBox</string>
+    <string name="RadioButtonText">RadioButton</string>
 </resources>
