--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <string name="app_name">Assignment 1</string>
+        <string name="app_name">AndroidAssignment</string>
         <string name="hello_message">Bonjour!</string>
-        <string name="ButtonText">I\'m a Button</string>
+        <string name="ButtonText">Je suis un bouton</string>
+        <string name="LoginText">Connexion</string>
+        <string name="LoginHintName">Identifiant</string>
+        <string name="PasswordText">Le mot de passe</string>
+        <string name="SwitchText">Qu\'est-ce que cela fait?</string>
+        <string name="CheckBoxText">Case à cocher</string>
+        <string name="RadioButtonText">Bouton Radio</string>
 </resources>
