--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="SwitchText">What does this do?</string>
     <string name="CheckBoxText">CheckBox</string>
     <string name="RadioButtonText">RadioButton</string>
+    <string name="LoginButtonText">Login</string>
+    <string name="dialog_message">Do you want to finish activity?</string>
+    <string name="dialog_title">Finish Activity?</string>
+    <string name="ok">ok</string>
+    <string name="cancel">cancel</string>
+
 </resources>
