--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -14,4 +14,5 @@
         <string name="dialog_title">Terminer l\'activité?</string>
         <string name="ok">d\'accord</string>
         <string name="cancel">annuler</string>
+        <string name="chatButtonText">Envoyer</string>
 </resources>
